--- a/UsersMS/UserMS/UserMS/UserMS.csproj
+++ b/UsersMS/UserMS/UserMS/UserMS.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserMS.DTO\UserMS.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
