--- a/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
+++ b/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
@@ -8,15 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="UserMS.Client" Version="1.0.0" />
-    <PackageReference Include="UserMS.DTO" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InvoiceMS.Contracts\InvoiceMS.Contracts.csproj" />
+    <ProjectReference Include="..\InventoryMS.Contracts\InventoryMS.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
