--- a/UsersMS/UserMS/UserMS.Client/UserMS.Client.csproj
+++ b/UsersMS/UserMS/UserMS.Client/UserMS.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,10 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\UserMS.DTO\UserMS.DTO.csproj" />
+    <PackageReference Include="UserMS.DTO" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
