Added InventoryClientSettings File

--- a/InvoiceMS/InvoiceMS/InvoiceMS.Host/InvoiceMS.Host.csproj
+++ b/InvoiceMS/InvoiceMS/InvoiceMS.Host/InvoiceMS.Host.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="PD21.InventoryMs.Client" Version="1.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="UserMS.Client" Version="1.0.0" />
     <PackageReference Include="UserMS.DTO" Version="1.0.0" />
