--- a/InventoryMS/InventoryMS/InventoryMS.Client/InventoryMS.Client.csproj
+++ b/InventoryMS/InventoryMS/InventoryMS.Client/InventoryMS.Client.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>PD21.InventoryMs.Client</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>AndriiTiurikov</Authors>
     <Company>PD21</Company>
     <Product>MSA</Product>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="clientsettings.json">
+    <None Update="inventory-client-settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
