InvoiceMS.Infrastructure and Contracts

--- a/InvoiceMS/InvoiceMS/InvoiceMS.Host/InvoiceMS.Host.csproj
+++ b/InvoiceMS/InvoiceMS/InvoiceMS.Host/InvoiceMS.Host.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\InvoiceMS.Contracts\InvoiceMS.Contracts.csproj" />
+    <ProjectReference Include="..\InvoiceMS.Infrastructure\InvoiceMS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
