--- a/InvoiceMS/InvoiceMS/InvoiceMS.Infrastructure/InvoiceMS.Infrastructure.csproj
+++ b/InvoiceMS/InvoiceMS/InvoiceMS.Infrastructure/InvoiceMS.Infrastructure.csproj
@@ -7,7 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="PD21.InventoryMs.Client" Version="1.0.1" />
+    <PackageReference Include="PD21.InventoryMs.Contracts" Version="1.0.0" />
+    <PackageReference Include="UserMS.Client" Version="1.0.0" />
+    <PackageReference Include="UserMS.DTO" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InvoiceMS.Contracts\InvoiceMS.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
