--- a/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
+++ b/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
@@ -17,11 +17,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InventoryMS.Contracts\InventoryMS.Contracts.csproj" />
+    <ProjectReference Include="..\InventoryMS.Client\InventoryMS.Client.csproj" />
+    <ProjectReference Include="..\InventoryMS.Events\InventoryMS.Events.csproj" />
   </ItemGroup>
 
 </Project>
