--- a/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
+++ b/InventoryMS/InventoryMS/InventoryMS.Host/InventoryMS.Host.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\InventoryMS.Client\InventoryMS.Client.csproj" />
+    <ProjectReference Include="..\InventoryMS.Contracts\InventoryMS.Contracts.csproj" />
     <ProjectReference Include="..\InventoryMS.Events\InventoryMS.Events.csproj" />
   </ItemGroup>
 
