--- a/InvoiceMS/InvoiceMS/InvoiceMS.Infrastructure/InvoiceMS.Infrastructure.csproj
+++ b/InvoiceMS/InvoiceMS/InvoiceMS.Infrastructure/InvoiceMS.Infrastructure.csproj
@@ -17,8 +17,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="PD21.InventoryMs.Client" Version="1.0.1" />
     <PackageReference Include="PD21.InventoryMs.Contracts" Version="1.0.0" />
+    <PackageReference Include="PD21.InventoryMs.Events" Version="1.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
     <PackageReference Include="UserMS.Client" Version="1.0.0" />
     <PackageReference Include="UserMS.DTO" Version="1.0.0" />
   </ItemGroup>
