--- a/DiscountMS/DiscountMS/DiscountMS.Host/appsettings.json
+++ b/DiscountMS/DiscountMS/DiscountMS.Host/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DiscountMsDb": "Host=localhost;Database=discount_ms_db;Username=postgres;Password=123456"
+    "DiscountMsDb": "Host=172.18.0.2;Database=discount_ms_db;Username=postgres;Password=123456"
   }
 }
