--- a/UsersMS/UserMS/UserMS/appsettings.json
+++ b/UsersMS/UserMS/UserMS/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserMsDb": "Server=.\\;Database=UserMsDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "UserMsDb": "Server=172.18.0.4;Database=UserMsDb;User Id=sa;Password=myPassw0rd2o19;TrustServerCertificate=True"
   }
 }
